Requiremnts update, deps.py configure, parser adjust and llm service configure

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ python-dotenv
 
 # Document pipeline
 docling
-
 # Vector & NLP
 numpy
 
 # Optional (preparação futura)
 openai
 huggingface-hub
+
+sentence_transformers
+torch
